--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+django = "^5.1.3"
+psycopg2-binary = "^2.9.10"
+pillow = "^11.0.0"
+django-stubs = "^5.1.1"
+black = "^24.10.0"
+django-rest-framework = "^0.1.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
