--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ django-stubs = "^5.1.1"
 black = "^24.10.0"
 django-rest-framework = "^0.1.0"
 python-dotenv = "^1.0.1"
+drf-jwt = "^1.19.2"
+djangorestframework-simplejwt = "^5.3.1"
+django-filter = "^24.3"
+django-cors-headers = "^4.6.0"
+drf-yasg = "^1.21.8"
+flake8 = "^7.1.1"
 
 
 [build-system]
