--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-filter = "^24.3"
 django-cors-headers = "^4.6.0"
 drf-yasg = "^1.21.8"
 flake8 = "^7.1.1"
+requests = "^2.32.3"
 
 
 [build-system]
