--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ django-cors-headers = "^4.6.0"
 drf-yasg = "^1.21.8"
 flake8 = "^7.1.1"
 requests = "^2.32.3"
+celery = "^5.4.0"
+django-celery-beat = "^2.7.0"
+redis = "^5.2.0"
 
 
 [build-system]
