--- a/.envsample
+++ b/.envsample
@@ -1,15 +1,20 @@
 DEBUG_MODE=
 
-CACHE_ENABLED=
-CACHE_LOCATION=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
+DB_ENGINE=
+
+SECRET_KEY=
+
 
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 EMAIL_HOST=
 EMAIL_PORT=
 
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
-DB_ENGINE
+CELERY_URL=
+
+TELEGRAM_URL=
+TELEGRAM_TOKEN=
