--- a/.envsample
+++ b/.envsample
@@ -1,9 +1,9 @@
 DEBUG_MODE=
 
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_HOST=
 DB_ENGINE=
 
 SECRET_KEY=
@@ -14,7 +14,8 @@ EMAIL_HOST_PASSWORD=
 EMAIL_HOST=
 EMAIL_PORT=
 
-CELERY_URL=
+CELERY_RESULT_BACKEND=
+CELERY_BROKER_URL=
 
 TELEGRAM_URL=
 TELEGRAM_TOKEN=
